--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Tangerine|Yrsa" rel="stylesheet">
-  <title>DevCamp React Starter</title>
+  <title>Book Keeping</title>
 </head>
 
 <body>
